--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,21 @@
         {
             "name": "Piotr Ścibor",
             "email": "piotr.scibor@pragmago.tech"
+        },
+        {
+            "name": "Paweł Zaręba",
+            "email": "pawel.zareba1999@gmail.com"
         }
     ],
     "autoload": {
         "psr-4": {
             "PragmaGoTech\\Interview\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5"
+    },
+    "require": {
+        "php": "^8.3"
     }
 }
